--- a/AnimationHW/Storyboards/Base.lproj/Main.storyboard
+++ b/AnimationHW/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,11 +13,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="AnimationViewController" customModule="AnimationHW" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yjq-3g-ku0" customClass="SpringButton" customModule="SpringAnimation">
-                                <rect key="frame" x="77" y="430.5" width="446" height="31"/>
+                                <rect key="frame" x="77" y="632" width="260" height="31"/>
                                 <color key="backgroundColor" systemColor="systemCyanColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button">
@@ -52,91 +53,22 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HTe-5G-3oL" customClass="SpringView" customModule="SpringAnimation">
-                                <rect key="frame" x="77" y="123" width="446" height="212.5"/>
+                                <rect key="frame" x="77" y="167" width="260" height="212.5"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="5J0-i2-s8g" userLabel="FixedLabelsStackView">
-                                        <rect key="frame" x="10" y="5" width="68" height="202.5"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="preset:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcC-ZT-r7k">
-                                                <rect key="frame" x="0.0" y="0.0" width="68" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="curve:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9aS-ME-fT4">
-                                                <rect key="frame" x="0.0" y="45.5" width="68" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="force:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JzT-Mu-Ukj">
-                                                <rect key="frame" x="0.0" y="91" width="68" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="duration:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oBY-AT-vtO">
-                                                <rect key="frame" x="0.0" y="136.5" width="68" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="delay:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xe8-8h-s9r">
-                                                <rect key="frame" x="0.0" y="182" width="68" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="68" id="tYE-sR-EjB"/>
-                                        </constraints>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="o3D-5X-hTT" userLabel="DynamicStackView">
-                                        <rect key="frame" x="83" y="5" width="358" height="202.5"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="preset" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x8P-GX-heV" userLabel="preset">
-                                                <rect key="frame" x="154.5" y="0.0" width="49" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="curve" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FOv-lT-65w">
-                                                <rect key="frame" x="158" y="45.5" width="42.5" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="force" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tG7-t8-d4m">
-                                                <rect key="frame" x="159.5" y="91" width="39.5" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="duration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="exo-fM-kOR">
-                                                <rect key="frame" x="147.5" y="136.5" width="63.5" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="delay" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1G-Wl-zWE">
-                                                <rect key="frame" x="158.5" y="182" width="41" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Animation parametres" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="85w-F7-Lw8">
+                                        <rect key="frame" x="0.0" y="0.0" width="260" height="212.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemCyanColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="o3D-5X-hTT" secondAttribute="bottom" constant="5" id="4EM-ZI-fmP"/>
-                                    <constraint firstAttribute="trailing" secondItem="o3D-5X-hTT" secondAttribute="trailing" constant="5" id="EiS-iK-hG0"/>
-                                    <constraint firstItem="5J0-i2-s8g" firstAttribute="top" secondItem="HTe-5G-3oL" secondAttribute="top" constant="5" id="McG-ev-WLz"/>
-                                    <constraint firstItem="5J0-i2-s8g" firstAttribute="leading" secondItem="HTe-5G-3oL" secondAttribute="leading" constant="10" id="TeS-G2-wlj"/>
-                                    <constraint firstItem="o3D-5X-hTT" firstAttribute="leading" secondItem="5J0-i2-s8g" secondAttribute="trailing" constant="5" id="mq9-oY-XAO"/>
-                                    <constraint firstAttribute="bottom" secondItem="5J0-i2-s8g" secondAttribute="bottom" constant="5" id="reu-7b-FBX"/>
-                                    <constraint firstItem="o3D-5X-hTT" firstAttribute="top" secondItem="HTe-5G-3oL" secondAttribute="top" constant="5" id="uKJ-c5-uGH"/>
+                                    <constraint firstAttribute="bottom" secondItem="85w-F7-Lw8" secondAttribute="bottom" id="3cc-hV-YvL"/>
+                                    <constraint firstItem="85w-F7-Lw8" firstAttribute="top" secondItem="HTe-5G-3oL" secondAttribute="top" id="4HP-nr-nfZ"/>
+                                    <constraint firstItem="85w-F7-Lw8" firstAttribute="leading" secondItem="HTe-5G-3oL" secondAttribute="leading" id="JDD-1T-daX"/>
+                                    <constraint firstAttribute="trailing" secondItem="85w-F7-Lw8" secondAttribute="trailing" id="K5n-M9-ZGm"/>
+                                    <constraint firstAttribute="height" constant="212.5" id="MUj-Va-7Dw"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -151,18 +83,14 @@
                             <constraint firstItem="HTe-5G-3oL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="77" id="7tL-5c-IcX"/>
                             <constraint firstItem="HTe-5G-3oL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KGr-E7-wAX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="yjq-3g-ku0" secondAttribute="bottom" multiplier="1.3" id="LFn-3H-C2R"/>
-                            <constraint firstItem="HTe-5G-3oL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="123" id="W8W-ob-3PI"/>
+                            <constraint firstItem="HTe-5G-3oL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="123" id="Qhm-gR-4eG"/>
                             <constraint firstItem="yjq-3g-ku0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Z1j-ug-rEI"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HTe-5G-3oL" secondAttribute="trailing" constant="77" id="hOA-2m-ONp"/>
                             <constraint firstItem="yjq-3g-ku0" firstAttribute="width" secondItem="HTe-5G-3oL" secondAttribute="width" id="wcd-I9-K2P"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="curveLabel" destination="FOv-lT-65w" id="OVK-bz-gOh"/>
-                        <outlet property="delayLabel" destination="i1G-Wl-zWE" id="ClP-DH-SWo"/>
-                        <outlet property="durationLabel" destination="exo-fM-kOR" id="LJg-jp-Bcu"/>
-                        <outlet property="forceLabel" destination="tG7-t8-d4m" id="MkP-Zd-Onj"/>
-                        <outlet property="presetLabel" destination="x8P-GX-heV" id="d6j-QQ-NbV"/>
+                        <outlet property="animationLabel" destination="85w-F7-Lw8" id="tcn-x2-IKu"/>
                         <outlet property="springView" destination="HTe-5G-3oL" id="g1B-fe-W0b"/>
                     </connections>
                 </viewController>
